--- a/technical-documentation/index.adoc
+++ b/technical-documentation/index.adoc
@@ -5,12 +5,12 @@
 
 include::topics/templates/document-attributes-community.adoc[]
 
-:productoverview_guide:
+:technicaldocumentation_guide:
 
-= {productoverview_name}
+= {technicaldocumentation_name}
 
-:release_header_guide: {productoverview_name_short}
-:release_header_latest_link: {productoverview_link_latest}
+:release_header_guide: {technicaldocumentation_name_short}
+:release_header_latest_link: {technicaldocumentation_link_latest}
 include::topics/templates/release-header.adoc[]
 
 include::topics.adoc[]
